plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.10'
}

sourceCompatibility = 1.17
targetCompatibility = 1.17

repositories {
  mavenCentral()
}

javafx {
  version = "17.0.2"
  modules = [ 'javafx.controls' ]   //will likely need to add more things here.
  //If we are unable to import things, likely need to add a module here.
}

dependencies  {
  testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
  testImplementation 'org.mockito:mockito-junit-jupiter:4.4.0'
  testImplementation 'org.mockito:mockito-inline:4.4.0'
  testImplementation 'org.mockito:mockito-core:4.4.0'

  implementation 'com.google.code.gson:gson:2.9.0'
  implementation 'org.xerial:sqlite-jdbc:3.36.0.3'

  implementation 'org.controlsfx:controlsfx:11.1.1'

  implementation 'org.testfx:testfx-core:4.0.15-alpha'
  implementation 'org.testfx:testfx-junit5:4.0.15-alpha'
}

application {
  // Define the main class for the application.
  mainClass = 'majorproject.App'
}

tasks.named('test') {
  // Use JUnit Platform for unit tests.
  useJUnitPlatform()
}

applicationDefaultJvmArgs = [
  "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
]

test.outputs.upToDateWhen {false}

test {
  filter {
    includeTestsMatching "majorproject.test.model.*"
  }
}

task viewTest(type: Test) {
    useJUnitPlatform()
}
